--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Proyecto Backend bajo nodejs 8.11",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha",
     "start": "node app.js"
   },
   "repository": {
@@ -21,6 +21,7 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "lodash": "^4.17.10",
+    "pg": "^7.4.3",
     "swagger-jsdoc": "^1.9.7",
     "swagger-ui-express": "^3.0.10"
   },
